esercizio terminato, 'siatemato'

--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
                 <br>
                 amet, consectetur adipiscing elit.
               </p>
+              <!-- button -->
               <p>
                 <a class="btn btn-lg upper " href="#" role="button">buy now</a>
               </p>
@@ -368,8 +369,7 @@
               <a :href=`${btn.link}`>
                 <img src="dist/img/avadabarbers_footer_appointment_image.png" alt="appointment">
               </a>
-              <a class="btn btn-lg upper" :href=`${btn.link}` role="button">{{ btn.name }}</a>    
-              </div>
+              <a class="btn btn-lg upper" :href=`${btn.link}` role="button">{{ btn.name }}</a>
             </div>
           </div>
         </div>
